--- a/e-catalog.html
+++ b/e-catalog.html
@@ -259,12 +259,12 @@
     <footer class="footer-dark bg-dark-gray pb-0 pt-0 cover-background" style="background-image: url('images/demo-decor-store-footer-bg.jpg')">
       <div class="container pt-4 pb-4 md-pt-45px md-pb-45px">
         <div class="row justify-content-center">
-          <div class="col-7 col-lg-4 last-paragraph-no-margin order-sm-1 md-mb-50px xs-mb-30px">
+          <div class="col-lg-4 col-md-12 col-sm-12 last-paragraph-no-margin order-sm-1 md-mb-50px xs-mb-30px">
             <a href="index.html" class="footer-logo mb-15px d-inline-block"><img src="images/logo/logo.png" data-at2x="images/logo/logo.png" alt="" /></a>
             <p class="w-80 sm-w-100">AZM İç ve Dış Ticaret olarak amacımız, zor koşullara rağmen fedakârca üretim yapan firmalarımızın ve KOBİ’lerimizin ürünlerini uluslararası pazarlara tanıtarak onları global arenada rekabet edebilir hale getirmektir.</p>
           </div>
 
-          <div class="col-6 col-lg-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
+          <div class="col-lg-2 col-md-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-2 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sayfalar</span>
             <ul>
               <li><a href="about.html">Hakkımızda</a></li>
@@ -276,7 +276,7 @@
             </ul>
           </div>
 
-          <div class="col-6 col-lg-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-3">
+          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sosyal Medya</span>
             <ul>
               <li>
@@ -286,15 +286,15 @@
                 <a href="#" class="footer__icons--gap"><i class="bi bi-instagram"></i>İnstagram</a>
               </li>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="bi bi-twitter-x"></i>X</a>
+                <a href="hayırsız" class="footer__icons--gap"><i class="bi bi-twitter-x"></i>X</a>
               </li>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="bi bi-youtube"></i>Youtube</a>
+                <a href="hayırsız" class="footer__icons--gap"><i class="bi bi-youtube"></i>Youtube</a>
               </li>
             </ul>
           </div>
 
-          <div class="col-6 col-lg-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-3">
+          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">İLetişim</span>
             <ul>
               <li>
