--- a/e-catalog.html
+++ b/e-catalog.html
@@ -259,7 +259,7 @@
     <footer class="footer-dark bg-dark-gray pb-0 pt-0 cover-background" style="background-image: url('images/demo-decor-store-footer-bg.jpg')">
       <div class="container pt-4 pb-4 md-pt-45px md-pb-45px">
         <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-12 col-sm-12 last-paragraph-no-margin order-sm-1 md-mb-50px xs-mb-30px">
+          <div class="col-lg-4 col-md-12 col-sm-12 last-paragraph-no-margin order-sm-1 md-mb-50px xs-mb-30px mobile__footer--pages">
             <a href="index.html" class="footer-logo mb-15px d-inline-block"><img src="images/logo/logo.png" data-at2x="images/logo/logo.png" alt="" /></a>
             <p class="w-80 sm-w-100">AZM İç ve Dış Ticaret olarak amacımız, zor koşullara rağmen fedakârca üretim yapan firmalarımızın ve KOBİ’lerimizin ürünlerini uluslararası pazarlara tanıtarak onları global arenada rekabet edebilir hale getirmektir.</p>
           </div>
