--- a/blog-detail.html
+++ b/blog-detail.html
@@ -188,7 +188,7 @@
       </nav>
     </header>
 
-    <section class="one-fourth-screen bg-dark-gray ipad-top-space-margin sm-mb-50px" data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)"></section>
+    <section class="one-fourth-screen bg-dark-gray sm-mb-50px" data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)"></section>
 
     <section class="half-section">
       <div class="container">
