--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </p>
 
             <div class="mt-35px d-flex flex-wrap">
-              <a href="demo-logistics-our-services.html" class="btn btn-large btn-dark-gray btn-hover-animation-switch btn-round-edge btn-box-shadow btn-icon-right me-30px">
+              <a href="about.html" class="btn btn-large btn-dark-gray btn-hover-animation-switch btn-round-edge btn-box-shadow btn-icon-right me-30px">
                 <span>
                   <span class="btn-text">Daha Fazla</span>
                   <span class="btn-icon"><i class="feather icon-feather-arrow-right"></i></span>
@@ -276,7 +276,7 @@
             </div>
           </div>
 
-          <div class="col clients-style-07">
+          <div class="col clients-style-07 md-mb-30px">
             <div class="d-flex align-items-center justify-content-center overflow-hidden position-relative client-box box-shadow-extra-large bg-white min-h-100px card__bg-rd">
               <div class="full__bg--card">
                 <img src="images/home/full-bg-icon-3.png" alt="" />
