--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       <div class="container">
         <img src="v" class="position-absolute bottom-10px right-0px z-index-minus-1" data-bottom-top="transform: translateY(150px)" data-top-bottom="transform: translateY(-150px)" alt="" />
         <div class="row align-items-center justify-content-center">
-          <div class="col-lg-6 col-md-10 md-mb-50px mobile" data-anime='{ "translate": [0, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-            <img src="images/logo/logo.png" class="w-100" data-bottom-top="transform: translateY(-50px)" data-top-bottom="transform: translateY(50px)" alt="" />
+          <div class="col-lg-6 col-md-10 md-mb-50px home__about--logo--df" data-anime='{ "translate": [0, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
+            <img src="images/logo/logo.png" class="home__about--logo" data-bottom-top="transform: translateY(-50px)" data-top-bottom="transform: translateY(50px)" alt="" />
           </div>
           <div class="col-xl-5 col-lg-6 col-md-10 offset-xl-1" data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
             <h2 class="fw-700 ls-minus-1px text-dark-gray mb-20px">Hakkımızda</h2>
@@ -413,16 +413,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Textured sweater</a>
@@ -438,16 +428,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Traveller shirt</a>
@@ -463,16 +443,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Crewneck sweatshirt</a>
@@ -488,16 +458,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Skinny trousers</a>
@@ -513,16 +473,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sleeve sweater</a>
@@ -538,16 +488,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Pocket sweatshirt</a>
@@ -563,16 +503,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Cotton sweater</a>
@@ -588,16 +518,6 @@
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
-                            <div class="shop-hover d-flex justify-content-center">
-                              <ul>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to wishlist"><i class="feather icon-feather-heart fs-16"></i></a>
-                                </li>
-                                <li>
-                                  <a href="#" class="w-40px h-40px bg-white text-dark-gray d-flex align-items-center justify-content-center rounded-circle ms-5px me-5px" data-bs-toggle="tooltip" data-bs-placement="left" title="Quick shop"><i class="feather icon-feather-eye fs-16"></i></a>
-                                </li>
-                              </ul>
-                            </div>
                           </div>
                           <div class="shop-footer text-center">
                             <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Texture regular</a>
