--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="ThemeZaa" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 48+ ready demos." />
+    <meta name="description" content="Azm Dış Ticaret" />
 
     <link rel="shortcut icon" href="images/logo/favicon.png" />
     <link rel="apple-touch-icon" href="images/logo/favicon.png" />
@@ -191,8 +191,7 @@
     <section class="p-0 top-space-margin full-screen md-h-600px sm-h-300px slider__mt">
       <div
         class="swiper h-100 swiper-light-pagination"
-        data-slider-options='{ "slidesPerView": 1, "loop": true, "pagination": { "el": ".swiper-pagination-bullets", "clickable": true }, "navigation": { "nextEl": ".slider-one-slide-next-1", "prevEl": ".slider-one-slide-prev-1" }, "autoplay": { "delay": 4000, "disableOnInteraction": false },  "keyboard": { "enabled": true, "onlyInViewport": true }, "effect": "slide" }'
-      >
+        data-slider-options='{ "slidesPerView": 1, "loop": true, "pagination": { "el": ".swiper-pagination-bullets", "clickable": true }, "navigation": { "nextEl": ".slider-one-slide-next-1", "prevEl": ".slider-one-slide-prev-1" }, "autoplay": { "delay": 4000, "disableOnInteraction": false },  "keyboard": { "enabled": true, "onlyInViewport": true }, "effect": "slide" }'>
         <div class="swiper-wrapper">
           <div class="swiper-slide cover-background" style="background-image: url('images/slider/slider.jpg')">
             <div class="container h-100">
@@ -303,8 +302,7 @@
           <div class="col-12 tab-style-04">
             <ul
               class="nav nav-tabs border-0 justify-content-center text-uppercase fw-600 mb-50px sm-mb-20px alt-font fs-32 ls-minus-05px text-transform-none"
-              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'
-            >
+              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'>
               <li class="nav-item">
                 <a data-bs-toggle="tab" href="#tab_five1" class="nav-link active">Popüler Kategoriler<span class="tab-border bg-dark-gray h-2px"></span></a>
               </li>
@@ -315,8 +313,7 @@
                   <div class="col-12 filter-content">
                     <ul
                       class="shop-boxed shop-wrapper grid grid-4col xxl-grid-5col xl-grid-4col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-large text-center"
-                      data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":150, "staggervalue": 150, "easing": "easeOutQuad" }'
-                    >
+                      data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":150, "staggervalue": 150, "easing": "easeOutQuad" }'>
                       <li class="grid-sizer"></li>
 
                       <li class="grid-item">
@@ -390,8 +387,7 @@
           <div class="col-12 tab-style-04">
             <ul
               class="nav nav-tabs border-0 justify-content-center text-uppercase fw-600 mb-50px sm-mb-20px alt-font fs-32 ls-minus-05px text-transform-none"
-              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'
-            >
+              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'>
               <li class="nav-item">
                 <a data-bs-toggle="tab" href="#tab_five1" class="nav-link active">Popüler Ürünler<span class="tab-border bg-dark-gray h-2px"></span></a>
               </li>
@@ -402,8 +398,7 @@
                   <div class="col-12">
                     <ul
                       class="shop-modern shop-wrapper grid-loading grid grid-4col lg-grid-3col md-grid-2col sm-grid-1col xs-grid-1col gutter-extra-large text-center"
-                      data-anime='{ "el": "childs", "translateY": [-15, 0], "opacity": [0,1], "duration": 300, "delay": 0, "staggervalue": 100, "easing": "easeOutQuad" }'
-                    >
+                      data-anime='{ "el": "childs", "translateY": [-15, 0], "opacity": [0,1], "duration": 300, "delay": 0, "staggervalue": 100, "easing": "easeOutQuad" }'>
                       <li class="grid-sizer"></li>
 
                       <li class="grid-item">
@@ -539,8 +534,7 @@
       <div class="container tab-style-04">
         <ul
           class="nav nav-tabs border-0 justify-content-center text-uppercase fw-600 mb-50px sm-mb-20px alt-font fs-32 ls-minus-05px text-transform-none"
-          data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'
-        >
+          data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <li class="nav-item">
             <a data-bs-toggle="tab" href="#tab_five1" class="nav-link active">Blog<span class="tab-border bg-dark-gray h-2px"></span></a>
           </li>
@@ -549,8 +543,7 @@
           <div class="col-12 p-md-0">
             <ul
               class="blog-grid blog-wrapper grid-loading grid grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large"
-              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 300, "easing": "easeOutQuad" }'
-            >
+              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 300, "easing": "easeOutQuad" }'>
               <li class="grid-sizer"></li>
 
               <li class="grid-item">
@@ -699,7 +692,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
+          <div class="col-lg-2 col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sosyal Medya</span>
             <ul>
               <li>
@@ -717,7 +710,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
+          <div class="col-lg-2 col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">İLetişim</span>
             <ul>
               <li>
