--- a/sss.html
+++ b/sss.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="ThemeZaa" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 48+ ready demos." />
+    <meta name="description" content="Azm Dış Ticaret" />
 
     <link rel="shortcut icon" href="images/logo/favicon.png" />
     <link rel="apple-touch-icon" href="images/logo/favicon.png" />
