--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title>Hakkımızda - AZM Dış Ticaret</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="ThemeZaa" />
+    <meta name="author" content="Azm Dış Ticaret" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="Azm Dış Ticaret" />
 
