--- a/index.html
+++ b/index.html
@@ -404,14 +404,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Textured sweater</a>
-                            <div class="price lh-22 fs-16"><del>$200.00</del>$189.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
                           </div>
                         </div>
                       </li>
@@ -419,14 +418,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Traveller shirt</a>
-                            <div class="price lh-22 fs-16"><del>$350.00</del>$289.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
                           </div>
                         </div>
                       </li>
@@ -434,14 +432,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Crewneck sweatshirt</a>
-                            <div class="price lh-22 fs-16"><del>$220.00</del>$199.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
                           </div>
                         </div>
                       </li>
@@ -449,14 +446,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Skinny trousers</a>
-                            <div class="price lh-22 fs-16"><del>$300.00</del>$259.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
                           </div>
                         </div>
                       </li>
@@ -464,14 +460,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sleeve sweater</a>
-                            <div class="price lh-22 fs-16"><del>$250.00</del>$239.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
                           </div>
                         </div>
                       </li>
@@ -479,14 +474,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Pocket sweatshirt</a>
-                            <div class="price lh-22 fs-16"><del>$200.00</del>$189.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
                           </div>
                         </div>
                       </li>
@@ -494,14 +488,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Cotton sweater</a>
-                            <div class="price lh-22 fs-16"><del>$150.00</del>$129.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
                           </div>
                         </div>
                       </li>
@@ -509,14 +502,13 @@
                       <li class="grid-item">
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
-                            <a href="demo-fashion-store-single-product.html">
+                            <a href="single-product.html">
                               <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="demo-fashion-store-single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Texture regular</a>
-                            <div class="price lh-22 fs-16"><del>$170.00</del>$120.00</div>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
                           </div>
                         </div>
                       </li>
@@ -683,6 +675,7 @@
           <div class="col-lg-2 col-md-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-2 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sayfalar</span>
             <ul>
+              <li><a href="index.html">Anasayfa</a></li>
               <li><a href="about.html">Hakkımızda</a></li>
               <li><a href="institutional.html">Kurumsal</a></li>
               <li><a href="shop.html">Ürünler</a></li>
@@ -720,7 +713,7 @@
                 <a href="#" class="footer__icons--gap"><i class="bi bi-envelope"></i>info@azmdisitcaret.com</a>
               </li>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="fa-solid fa-location-dot"></i></a>
+                <a href="#" class="footer__icons--gap"><i class="fa-solid fa-location-dot"></i>Yunusemre/Manisa</a>
               </li>
             </ul>
           </div>
