--- a/e-catalog.html
+++ b/e-catalog.html
@@ -267,6 +267,7 @@
           <div class="col-lg-2 col-md-2 col-sm-4 xs-mb-30px order-sm-3 order-lg-2 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sayfalar</span>
             <ul>
+              <li><a href="index.html">Anasayfa</a></li>
               <li><a href="about.html">Hakkımızda</a></li>
               <li><a href="institutional.html">Kurumsal</a></li>
               <li><a href="shop.html">Ürünler</a></li>
@@ -276,7 +277,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
+          <div class="col-lg-2 col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">Sosyal Medya</span>
             <ul>
               <li>
@@ -294,7 +295,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2  col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
+          <div class="col-lg-2 col-md-4 col-sm-4 xs-mb-30px order-sm-3 order-lg-3 mobile__footer--pages">
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">İLetişim</span>
             <ul>
               <li>
@@ -304,7 +305,7 @@
                 <a href="#" class="footer__icons--gap"><i class="bi bi-envelope"></i>info@azmdisitcaret.com</a>
               </li>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="fa-solid fa-location-dot"></i></a>
+                <a href="#" class="footer__icons--gap"><i class="fa-solid fa-location-dot"></i>Yunusemre/Manisa</a>
               </li>
             </ul>
           </div>
