--- a/blog-detail.html
+++ b/blog-detail.html
@@ -188,10 +188,13 @@
       </nav>
     </header>
 
-    <section class="one-fourth-screen bg-dark-gray sm-mb-50px" data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)"></section>
 
     <section class="half-section">
       <div class="container">
+        <div class="description__img">
+          <img src="https://lipsum.app/1000x667" alt="">
+        </div>
+        
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-9 last-paragraph-no-margin">
             <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">Strategies for streamlining logistics operations</h6>
